--- a/src/options.html
+++ b/src/options.html
@@ -8,16 +8,18 @@
   </head>
 
   <body>
-    <h1>Pixiv Hide Works Options</h1>
+    <main id="main">
+      <h1>Pixiv Hide Works Options</h1>
 
-    <form id="form">
-      <label for="hidden-tags">Hidden tags (one per line):</label>
-      <textarea id="hidden-tags" name="hidden-tags"></textarea>
+      <form id="form">
+        <label for="hidden-tags">Hidden tags:</label>
+        <textarea id="hidden-tags" name="hidden-tags"></textarea>
 
-      <label for="highlighted-tags">Highlighted tags (one per line):</label>
-      <textarea id="highlighted-tags" name="highlighted-tags"></textarea>
+        <label for="highlighted-tags">Highlighted tags:</label>
+        <textarea id="highlighted-tags" name="highlighted-tags"></textarea>
 
-      <button type="submit" id="submit">Save</button>
-    </form>
+        <button type="submit" id="submit">Save</button>
+      </form>
+    </main>
   </body>
 </html>
